# draction

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.json
.claude/: settings.local.json
.github/workflows/: deploy-landing.yml
.omc/plans/: open-questions.md  spec-review-consensus.md
.omc/prompts/: codex-architecture.md  codex-prompt-you-are-the-backend-architect-for-draction-drop-ac-2ddc9226.md  codex-prompt-you-are-the-backend-architect-for-draction-drop-ac-45aaf8e0.md  codex-status-you-are-the-backend-architect-for-draction-drop-ac-2ddc9226.json  codex-status-you-are-the-backend-architect-for-draction-drop-ac-45aaf8e0.json  gemini-design.md  gemini-prompt-you-are-the-frontendui-designer-for-draction-drop--da1a8dcd.md  gemini-response-you-are-the-frontendui-designer-for-draction-drop--da1a8dcd.md  gemini-status-you-are-the-frontendui-designer-for-draction-drop--da1a8dcd.json
.omc/state/: agent-replay-e24d5420-b9a6-468f-ab6e-a1d165486362.jsonl  subagent-tracking.json
apps/: AGENTS.md
apps/draction-desktop/: AGENTS.md  index.html  overlay.html  package.json  vite.config.ts
apps/draction-desktop/e2e/: run-tests.sh
apps/draction-desktop/src/: AGENTS.md  App.tsx  main.tsx  styles.css
apps/draction-desktop/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
apps/draction-desktop/src-tauri/capabilities/: default.json
apps/draction-desktop/src-tauri/migrations/: 001_init.sql
apps/draction-desktop/src-tauri/src/: AGENTS.md  lib.rs  main.rs
apps/draction-desktop/src-tauri/src/commands/: AGENTS.md  auth.rs  ingest.rs  mod.rs  overlay.rs  settings.rs  undo.rs
apps/draction-desktop/src-tauri/src/platform/: AGENTS.md  macos.rs  mod.rs
apps/draction-desktop/src/components/: AGENTS.md  RulesPanel.tsx  RunsPanel.tsx
apps/draction-desktop/src/components/settings/: Btn.tsx  Chip.tsx  DrakySprite.tsx  Input.tsx  NavItem.tsx  PaneHeader.tsx  Row.tsx  Section.tsx  Select.tsx  icons.tsx
apps/draction-desktop/src/components/settings/panes/: AboutPane.tsx  AdvancedPane.tsx  ConnectionsPane.tsx  DrakyPane.tsx  GeneralPane.tsx  InboxPane.tsx  RulesBehaviorPane.tsx  SafetyPane.tsx
apps/draction-desktop/src/components/ui/: Dialog.tsx  Switch.tsx  Tabs.tsx  Toast.tsx
apps/draction-desktop/src/dashboard/: AGENTS.md
apps/draction-desktop/src/lib/: motion.ts  query.ts  settings.ts
apps/draction-desktop/src/lib/i18n/: index.ts
apps/draction-desktop/src/overlay/: AGENTS.md  App.tsx  main.tsx
apps/draction-desktop/src/stores/: settingsStore.ts  uiStore.ts
apps/draction-native/: AGENTS.md  Cargo.toml
apps/draction-native/src/: main.rs
apps/landing/: AGENTS.md  astro.config.mjs  package.json
apps/landing/src/: AGENTS.md
apps/landing/src/components/: DrakyHero.tsx  ThemeToggle.tsx
apps/landing/src/layouts/: Layout.astro
apps/landing/src/pages/: index.astro
apps/landing/src/styles/: global.css
apps/openclaw-bridge/: AGENTS.md
crates/: AGENTS.md
crates/draction-api/: AGENTS.md  Cargo.toml
crates/draction-api/src/: AGENTS.md  auth.rs  lib.rs  router.rs  state.rs  ws.rs
crates/draction-api/src/handlers/: AGENTS.md  events.rs  mod.rs  rules.rs  runs.rs  settings.rs  watcher.rs  workflows.rs
crates/draction-api/src/middleware/: AGENTS.md  auth.rs  localhost.rs  mod.rs
crates/draction-app-core/: AGENTS.md  Cargo.toml
crates/draction-app-core/src/: lib.rs  watcher.rs
crates/draction-app-core/tests/: api_integration_test.rs
crates/draction-db/: AGENTS.md  Cargo.toml
crates/draction-db/src/: db.rs  lib.rs  pool.rs  repo.rs
crates/draction-domain/: AGENTS.md  Cargo.toml
crates/draction-domain/src/: event.rs  ids.rs  lib.rs  rule.rs  settings.rs  workflow.rs
crates/draction-engine/: AGENTS.md  Cargo.toml
crates/draction-engine/src/: AGENTS.md  lib.rs  node_registry.rs  rule_engine.rs  workflow_engine.rs
crates/draction-engine/src/executors/: AGENTS.md  copy_node.rs  mod.rs  move_node.rs  rename_node.rs  transcode_node.rs  webhook_node.rs
crates/draction-events/: AGENTS.md  Cargo.toml
crates/draction-events/src/: bus.rs  envelope.rs  lib.rs
crates/draction-inbox/: AGENTS.md  Cargo.toml
crates/draction-inbox/src/: file_ops.rs  ingest.rs  lib.rs  undo.rs
crates/draction-lifecycle/: AGENTS.md  Cargo.toml
crates/draction-lifecycle/src/: crash_recovery.rs  lib.rs  lock.rs  shutdown.rs  state_file.rs
docs/: AGENTS.md
docs/adr/: 001-tech-stack.md  AGENTS.md
docs/design/: AGENTS.md  workflow-state-machine.md
scripts/: AGENTS.md  analyze.py  flood_transparent.py  remove_white.py
