[package]
name = "draction-app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
draction-api = { path = "../draction-api" }
draction-db = { path = "../draction-db" }
draction-domain = { path = "../draction-domain" }
draction-engine = { path = "../draction-engine" }
draction-events = { path = "../draction-events" }
draction-inbox = { path = "../draction-inbox" }
draction-lifecycle = { path = "../draction-lifecycle" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs = "6"
notify = { version = "6", features = ["macos_kqueue"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
