[package]
name = "draction-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
draction-domain = { path = "../draction-domain" }
draction-db = { path = "../draction-db" }
draction-events = { path = "../draction-events" }
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs = "6"
chrono.workspace = true
reqwest = { version = "0.12", features = ["json"] }
